<resources>
    <string name="app_name">MyShoppingApp</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About the Application</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Start SHopping</string>

    <string name="recentActivity">Your Recent Activity</string>
    <string name="title_activity_shop">Shop Activity</string>
    <string name="buy">I want to buy...</string>
    <string name="quantity">Enter Quantity</string>
    <string name="phone">Andriod Phones</string>
    <string name="welcome">Welcome</string>
    <string name="logout">Log Out</string>
    <string name="title_activity_about">About Activity</string>
</resources>